# fuel-card-fraud-monitoring

./: .gitignore  Makefile  README.md  pyproject.toml  run_demo.py  run_model.py
data/: README.md
scripts/: make_figures.py  run_investigation.py
sql/: investigation.sql
src/fuelguard/: features.py  fuel_data.py  investigation.py  metrics.py  model.py  rules.py  scoring.py
tests/: test_fuelguard.py
